--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -18,7 +18,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'dracula/tmux'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+# set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
@@ -36,7 +36,6 @@ set -g status-justify centre
 set -g status-left-length 200
 
 set -g status-left    '[#[fg=blue,bold]#S]'
-set -g status-right '#{prefix_highlight}'
 
 set -g status-style 'bg=default' # transparent
 set -g pane-active-border-style     'fg=magenta,bg=default'
