--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -36,6 +36,7 @@ set -g status-justify centre
 set -g status-left-length 200
 
 set -g status-left    '[#[fg=blue,bold]#S]'
+set -g status-right ''
 
 set -g status-style 'bg=default' # transparent
 set -g pane-active-border-style     'fg=magenta,bg=default'
