--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -18,15 +18,12 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'dracula/tmux'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
-# set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
-# tmux-prefix-highlight
-set -g @prefix_highlight_show_copy_mode 'on'
-set -g @prefix_highlight_copy_mode_attr 'fg=white,bg=blue'
+prfx="#{?client_prefix, <Wait>,}" 
 
 # +-----------+
 # | STATUSBAR |
@@ -36,7 +33,7 @@ set -g status-justify centre
 set -g status-left-length 200
 
 set -g status-left    '[#[fg=blue,bold]#S]'
-set -g status-right ''
+set -g status-right "#[fg=blue,bold] ${prfx} | %m-%d %H:%M"
 
 set -g status-style 'bg=default' # transparent
 set -g pane-active-border-style     'fg=magenta,bg=default'
