--- a/zsh/.zimrc
+++ b/zsh/.zimrc
@@ -20,4 +20,5 @@ zmodule djui/alias-tips
 
 zmodule ohmyzsh/ohmyzsh --root plugins/command-not-found
 zmodule ohmyzsh/ohmyzsh --root plugins/git
+zmodule atuinsh/atuin
 
